--- a/servicio-item-dev.properties
+++ b/servicio-item-dev.properties
@@ -1,4 +1,4 @@
 server.port=8006
-configuracion.texto=Configurando entorno ambiente desarrollo
-configuracion.autor.nombre=cristian
+configuracion.texto=Configurando entorno ambiente desarrollo.....
+configuracion.autor.nombre=Jhon DO
 configuracion.autor.email=christianperez433@gmail.com
